# SpecKit-Plus

./: mcp.json
.claude/agents/: ProjectOrganizer.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
_project_backup/.specify/memory/: constitution.md
_project_backup/specs/001-docusaurus-init/: research.md  spec.md
backend/: .env.example  README.md  chatkit_service.py  main.py  pyproject.toml  rag.py  simple_chatkit_api.py  test_all_modules.py  test_gemini.py  test_integration.py  test_vector_store.py
backend/.claude/: settings.local.json
backend/data/: vector_store.py
backend/history/prompts/001-backend-rag-pipeline/: 2-backend-rag-implementation-plan.plan.prompt.md
backend/history/prompts/general/: 2-replace-openai-with-gemini.general.prompt.md  8-rag-integration.general.prompt.md
backend/services/: chatkit_service.py  rag.py
backend/simple_agents/: aagents.py
backend/specs/001-backend-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
context/: Hackathon I_ Physical AI & Humanoid Robotics Textbook.md  Projectrequirements.md
frontend/: docusaurus.config.ts  pnpm-lock.yaml  sidebars.ts
frontend/docs/02-simulation/: _index.md
frontend/docs/03-perception/: _index.md
frontend/src/css/: custom.css
history/adr/: 0001-package-management-with-pnpm.md
my-website/: package-lock.json
scripts/: speak.sh
specs/001-docusaurus-init/: data-model.md  plan.md  quickstart.md  spec.md
specs/002-chatbot-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+46 files in other folders)
